Added about page

--- a/about.html
+++ b/about.html
@@ -29,14 +29,25 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hi, I'm Adriana!</h1>
-    <h2>Front-end Developer based in Malta.</h2>
-    <p>
-      For anyone who wants to start learning code, this workshop is very
-      interesting. You will be challenged with different exercises, and
-      everything is well explained, homework and deadlines are good for keep
-      focus.
-    </p>
-    <a href="">See my projects</a>
+    <div class="about-section container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="about-section-content">
+            <h1>Hi, I'm Adriana Cividini!</h1>
+            <h2 class="mt-4">Front-end Developer, based in Malta.</h2>
+            <p class="mt-4">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus.
+            </p>
+            <a href="" class="btn btn-branding">See my projects</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="image/patricia.png" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
