Created the Work page.

--- a/work.html
+++ b/work.html
@@ -30,22 +30,33 @@
   </head>
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1>Hi, I'm Adriana Cividini!</h1>
-            <h2 class="mt-4">Front-end Developer, based in Malta.</h2>
-            <p class="mt-4">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus.
-            </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img src="image/yogurt.png" class="img-fluid mb-3 rounded" alt="" />
+            <h3 class="text-center m-0">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="image/patricia.png" alt="" class="img-fluid" />
+          <div class="col-md-6 mb-4">
+            <img
+              src="image/weather.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">Built with HTML and JavaScript</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="image/sun.png" class="img-fluid mb-3 rounded" alt="" />
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center text-muted">Built with HTML and React</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img src="image/translate.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">Built with HTML and React</p>
+          </div>
         </div>
       </div>
     </div>
