--- a/index.html
+++ b/index.html
@@ -114,6 +114,44 @@
           </div>
         </div>
       </div>
+
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">
+              Let's work together and I'll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-4">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <a href="mailto:dry.cividini@gmail.com" class="email-link"
+            >dry.cividini@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/dri_cividini/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/adriana-cividini-949076225/"
+            target="_blank"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/adriana.cividini.3/"
+            target="_blank"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
