--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="Adriana Cividini is a front-end enginner based in Malta. She can Code websites and Applications using HTML,CSS,JavaScript.
+      Here you can take a look about her."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,9 +30,38 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/real.css" />
-    <title>Document</title>
+    <title>About Adriana Cividini</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="/image/logo.png"
+            class="logo d-none d-md-block"
+            alt="Adriana Logo"
+          />
+          <img
+            src="image/small.logo.png"
+            class="logo d-block d-md-none"
+            alt="Adriana Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" class="active" title="About Adriana">
+              About</a
+            >
+          </li>
+          <li><a href="/work.html" title="Adriana Works"> Work</a></li>
+          <li><a href="/contact.html" title="Contact Adriana"> Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -41,13 +74,75 @@
               everything is well explained, homework and deadlines are good for
               keep focus.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="image/patricia.png" alt="" class="img-fluid" />
+          <img
+            src="image/patricia.png"
+            alt="Patricia Photo"
+            class="img-fluid"
+          />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">
+              Let's work together and I'll help you by all my best
+            </p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Adriana"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <a
+            href="mailto:dry.cividini@gmail.com"
+            class="email-link"
+            title="Email Adriana"
+            >dry.cividini@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://www.instagram.com/dri_cividini/"
+            target="_blank"
+            title="instagram Profile"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/adriana-cividini-949076225/"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/adriana.cividini.3/"
+            target="_blank"
+            title="Facebook Profile"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="text-center mt-5">
+          ✌️This Project was Coded by Adriana Cividini, and it is hosted on
+          <a
+            href="https://github.com/AdrianaCividini"
+            target="_blank"
+            title="GitfHub Repository"
+            >open-sourced</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
