--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="Adriana Cividini is a front-end enginner based in Malta. She can Code websites and Applications using HTML,CSS,JavaScript"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,24 +29,28 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/real.css" />
-    <title>Document</title>
+    <title>👩‍💻Front-end developer - Adriana Cividini</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="/image/logo.png" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="/image/logo.png"
+            class="logo d-none d-md-block"
+            alt="Adriana Logo"
+          />
           <img
             src="image/small.logo.png"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Adriana Logo"
           />
         </a>
         <ul>
-          <li class="active"><a href="/"> Home</a></li>
-          <li><a href="/about.html"> About</a></li>
-          <li><a href="/work.html"> Work</a></li>
-          <li><a href="/contact.html"> Contact</a></li>
+          <li class="active" title="Homepage"><a href="/"> Home</a></li>
+          <li><a href="/about.html" title="About Adriana"> About</a></li>
+          <li><a href="/work.html" title="Adriana Works"> Work</a></li>
+          <li><a href="/contact.html" title="Contact Adriana"> Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -53,7 +60,9 @@
       <h1>Adriana Cividini</h1>
       <h2 class="mb-5">Front-end developer based in Malta</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" title="contact me" class="btn btn-branding"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -63,7 +72,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="image/yogurt.png" class="img-fluid" alt="" />
+          <img src="image/yogurt.png" class="img-fluid" alt="Yogurt project" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -74,7 +83,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" title="" class="btn btn-branding-outline">
+              Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -89,17 +100,27 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="image/weather.png" class="img-fluid" alt="" />
+          <img
+            src="image/weather.png"
+            class="img-fluid"
+            alt="Weather project"
+          />
         </div>
       </div>
 
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="image/sun.png" class="img-fluid" alt="" />
+          <img
+            src="image/sun.png"
+            class="img-fluid"
+            alt="Translation project"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -110,47 +131,70 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more</a
+            >
           </div>
         </div>
       </div>
 
       <footer>
-        <div
-          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
-        >
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">
               Let's work together and I'll help you by all my best
             </p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-4">Contact me</a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Adriana"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <a href="mailto:dry.cividini@gmail.com" class="email-link"
+          <a
+            href="mailto:dry.cividini@gmail.com"
+            class="email-link"
+            title="Email Adriana"
             >dry.cividini@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/dri_cividini/" target="_blank">
+          <a
+            href="https://www.instagram.com/dri_cividini/"
+            target="_blank"
+            title="instagram Profile"
+          >
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
             href="https://www.linkedin.com/in/adriana-cividini-949076225/"
             target="_blank"
+            title="LinkedIn Profile"
           >
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a
             href="https://www.facebook.com/adriana.cividini.3/"
             target="_blank"
+            title="Facebook Profile"
           >
             <i class="fa-brands fa-facebook"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          ✌️This Project was Coded by Adriana Cividini, and it is hosted on
+          <a
+            href="https://github.com/AdrianaCividini"
+            target="_blank"
+            title="GitfHub Repository"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
