--- a/work.html
+++ b/work.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="Adriana Cividini is a front-end enginner based in Malta. She can Code websites and Applications using HTML,CSS,JavaScript. In this page you can check the projects that she has working..."
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -106,6 +103,7 @@
           </div>
         </div>
       </div>
+
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
